# veyrm

./: .env.example  .gitignore  .gitlab-ci-windows.yml  .gitlab-ci.yml  .markdownlint.json  .markdownlintignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  MVP_SUMMARY.md  README.md  build.sh  config.json  config.yml  fix_boost_json.py  fix_config.py  test_ecs_demo.cpp  test_input.cpp  test_invalid.yml  test_inventory_ui.sh  test_namespace.cpp  test_stairs.cpp
.github/workflows/: README.md  auto-fix-ci.yml  ci.yml  docs.yml  release.yml
.github/workflows-disabled/: README.md
DOC/: AI_ARCHITECTURE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BUILD_SCRIPT.md  CHANGELOG.md  CODE_STYLE_GUIDE.md  CONTROLS.md  CURRENT_STATE.md  DEVELOPER_GUIDE.md  DOOR_SYSTEM.md  IMPLEMENTATION_PLAN.md  PHASE_8.3_CHANGES_SUMMARY.md  README.md  RENDERING_IMPROVEMENTS.md  SESSION_SUMMARY.md  SPEC.md  TESTING_CATCH_UP_PLAN.md  TESTS.md  VIBE.md  VISUALIZATION_OPTIONS.md
DOC/ARCHIVE/: CHANGELOG_PHASE_12.1.md
DOC/FEATURES/: LIT_ROOMS.md
DOC/MVP/: 00_README.md  02_tech_stack.md  05_milestones.md  08_build_run.md
DOC/PHASES/: 0.1_INITIALIZE_REPOSITORY.md  1.3_MAIN_GAME_LOOP.md  11.2_INVENTORY_UI_COMPLETION.md  2.1_TILE_SYSTEM.md  3.1_ENTITY_BASE.md  3.3_ENTITY_MANAGER.md  5.1_ROOM_GENERATION.md  5.3_MAP_VALIDATION.md  6.1_FOV_ALGORITHM.md  6.2_VISIBILITY_SYSTEM.md  7.2_STATUS_BAR.md  8.1_MONSTER_ENTITY.md  8.3_BASIC_AI_REQUIREMENTS.md  9_COMBAT_SYSTEM_COMPLETE.md
DOC/WORLD/: 02_cosmology.md  04_orders_and_callings.md  06_spiral_vaults.md  07_foes.md  12_naming_tables.md  13_json_seeds.md  README.md
data/: items.json  monsters.json
docs/: README.md
docs/architecture/: ui-business-logic-separation-plan.md
docs/archive/: README.md  mvp-complete.md  mvp-summary.md
docs/ci/: docker-compose-fixed.yml  gitlab-runner-troubleshooting.md  setup-complete.md  windows-native-runner-setup.md  windows-runner-setup.md
docs/database/: database-erd.md  database-integration-guide.md  loginscreen-integration-summary.md  phase2-authentication-final-report.md  phase2-authentication-plan.md  phase2-completion-report.md  phase2-requirements-summary.md  phase3-complete-summary.md  phase3-save-system-implementation.md  phase3-save-system-plan.md  phase4-build-test-summary.md  phase4-ui-implementation-summary.md  postgres-as-single-source-migration.md  postgres-integration-plan.md  postgres-setup.md
docs/design/: README.md
docs/development/: README.md  cpp-best-practices.md  logging.md  testing-plan.md
docs/getting-started/: README.md  controls.md
docs/guides/: README.md
docs/project/: README.md  changelog.md  features.md  notes.md  status.md
docs/refactoring/: implementation-plan.md  phase1-complete.md  phase1-memory-safety-complete.md  phase1.2-pointer-safety-complete.md  phase2.1-ecs-foundation-complete.md  phase2.2-factory-migration-complete.md
docs/reference/: README.md
examples/: login_refactor_demo.cpp
include/: color_scheme.h  combat_system.h  config.h  entity.h  entity_manager.h  fov.h  frame_stats.h  game_loop.h  game_screen.h  game_serializer.h  game_state.h  input_handler.h  inventory.h  inventory_renderer.h  item.h  item_factory.h  item_manager.h  layout_system.h  log.h  login_screen.h  map.h  map_generator.h  map_memory.h  map_validator.h  message_log.h  message_log_adapter.h  monster.h  monster_ai.h  monster_factory.h  pathfinding.h  player.h  point.h  renderer.h  room.h  save_load_screen.h  serializable.h  spawn_manager.h  status_bar.h  test_input.h  tile.h  (+2 more)
include/auth/: authentication_service.h  login_controller.h  login_models.h  session_manager.h  validation_service.h
include/controllers/: game_controller.h  login_controller.h  main_menu_controller.h  save_load_controller.h
include/db/: database_manager.h  game_entity_repository.h  player_repository.h  repository_base.h  save_game_repository.h
include/ecs/: ai_component.h  ai_system.h  combat_component.h  combat_system.h  combat_system_bridge.h  component.h  data_loader.h  effects_component.h  entity.h  entity_adapter.h  entity_factory.h  entity_manager_bridge.h  equipment_component.h  equipment_system.h  event.h  experience_component.h  experience_system.h  game_world.h  health_component.h  input_system.h  inventory_component.h  inventory_system.h  item_component.h  logger_interface.h  loot_component.h  loot_system.h  movement_system.h  persistence_system.h  player_component.h  position_component.h  system.h  (+7 more)
src/: color_scheme.cpp  combat_system.cpp  config.cpp  entity.cpp  entity_manager.cpp  fov.cpp  frame_stats.cpp  game_loop.cpp  game_manager.cpp  game_screen.cpp  game_serializer.cpp  input_handler.cpp  inventory.cpp  inventory_renderer.cpp  item.cpp  item_factory.cpp  item_manager.cpp  layout_system.cpp  log.cpp  login_screen.cpp  main.cpp  map.cpp  map_generator.cpp  map_memory.cpp  map_validator.cpp  message_log.cpp  monster.cpp  monster_ai.cpp  monster_factory.cpp  pathfinding.cpp  player.cpp  point.cpp  renderer.cpp  room.cpp  save_load_screen.cpp  spawn_manager.cpp  status_bar.cpp  test_ftxui.cpp  test_input.cpp  turn_manager.cpp  (+1 more)
tests/: CMakeLists.txt  test_ai_system_complete.cpp  test_authentication.cpp  test_basic.cpp  test_cloud_save_basic.cpp  test_cloud_save_service.cpp  test_color_scheme_basic.cpp  test_combat_system.cpp  test_combat_system_complete.cpp  test_config.cpp  test_corridor_generation.cpp  test_data_loader.cpp  test_database.cpp  test_database_basic.cpp  test_database_integration.cpp  test_database_manager_extended.cpp  test_ecs.cpp  test_ecs_bridges.cpp  test_ecs_factory.cpp  test_ecs_integration.cpp  test_ecs_systems.cpp  test_entity.cpp  test_entity_factory_complete.cpp  test_entity_manager.cpp  test_entity_memory_safety.cpp  test_equipment_system.cpp  test_equipment_system_basic.cpp  test_error_handling.cpp  test_fov.cpp  test_game_controller.cpp  test_game_serializer.cpp  test_input_handler.cpp  test_inventory.cpp  test_inventory_system_complete.cpp  test_item.cpp  test_json.cpp  test_layout_system.cpp  test_lit_rooms.cpp  test_login_business_logic.cpp  test_login_screen.cpp  (+21 more)
(+176 files in other folders)
